--- a/client/app/home/home.component.html
+++ b/client/app/home/home.component.html
@@ -1,7 +1,58 @@
 ﻿
-<div class="col-md-6 col-md-offset-3">
-    <h1>Hi {{currentUser.firstName}}!</h1>
-    <p>You're logged in with the MEAN Stack & Angular 2!!</p>
+<div >
+    <h1>Bienvenue M.{{currentUser.lastName}}!</h1>
+
+
+
+    <h3>Ajouter un mouvement
+        <a [routerLink]="['/create']" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+        </a>
+    </h3>
+
+
+    <h2> Mes mouvements </h2>
+
+
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-md-2">Filter by: </div>
+            <div class="col-md-4">
+                <input type="text" [(ngModel)]="listeFilter">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Filtred by: {{listeFilter}} </h3>
+            </div>
+        </div>
+
+        <div class="table-responsive">
+            <table class="table" *ngIf="filteredMouvements && filteredMouvements.length">
+                <thead>
+                <tr>
+                    <th>Intitule</th>
+                    <th>Code</th>
+                    <th>Prix</th>
+                    <th>Date d'exécution</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let mouvement of filteredMouvements">
+                    <td>{{mouvement.intitule}}</td>
+                    <td>{{mouvement.code}}</td>
+                    <td>{{mouvement.prix}}</td>
+                    <td>{{mouvement.date | date:'dd/MM/yyyy'}}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+
+
+
     <h3>All registered users:</h3>
     <ul>
         <li *ngFor="let user of users">
