--- a/client/app/home/home.component.html
+++ b/client/app/home/home.component.html
@@ -36,6 +36,7 @@
                     <th>Code</th>
                     <th>Prix</th>
                     <th>Date d'exécution</th>
+                    <th>Action</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -44,6 +45,12 @@
                     <td>{{mouvement.code}}</td>
                     <td>{{mouvement.prix}}</td>
                     <td>{{mouvement.date | date:'dd/MM/yyyy'}}</td>
+                    <td>
+                        <a [routerLink]="['/edit/',mouvement._id]" class="btn btn-default btn-lg">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                        <a [routerLink]="['/create']" class="btn btn-default btn-lg">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
