--- a/client/app/home/home.component.html
+++ b/client/app/home/home.component.html
@@ -2,8 +2,6 @@
 <div >
     <h1>Bienvenue M.{{currentUser.lastName}}!</h1>
 
-
-
     <h3>Ajouter un mouvement
         <a [routerLink]="['/create']" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -40,7 +38,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let mouvement of filteredMouvements">
+                <tr *ngFor="let mouvement of filteredMouvements"  [ngClass]="{'danger':mouvement.prix < 0, 'success':mouvement.prix > 0} ">
                     <td>{{mouvement.intitule}}</td>
                     <td>{{mouvement.code}}</td>
                     <td>{{mouvement.prix}}</td>
@@ -48,7 +46,40 @@
                     <td>
                         <a [routerLink]="['/edit/',mouvement._id]" class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
-                        <a [routerLink]="['/create']" class="btn btn-default btn-lg">
+                        <a (click)="deleteMouvement(mouvement._id)" class="btn btn-default btn-lg">
+                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+
+    <h2> Mes mouvements à venir </h2>
+
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table class="table" *ngIf="filteredFuturMouvements && filteredFuturMouvements.length">
+                <thead>
+                <tr>
+                    <th>Intitule</th>
+                    <th>Code</th>
+                    <th>Prix</th>
+                    <th>Date d'exécution</th>
+                    <th>Action</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let mouvement of filteredFuturMouvements"  [ngClass]="{'danger':mouvement.prix < 0, 'success':mouvement.prix > 0} ">
+                    <td>{{mouvement.intitule}}</td>
+                    <td>{{mouvement.code}}</td>
+                    <td>{{mouvement.prix}}</td>
+                    <td>{{mouvement.date | date:'dd/MM/yyyy'}}</td>
+                    <td>
+                        <a [routerLink]="['/edit/',mouvement._id]" class="btn btn-default btn-lg">
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                        <a (click)="deleteMouvement(mouvement._id)" class="btn btn-default btn-lg">
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
                     </td>
                 </tr>
