--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,4 +1,5 @@
-﻿<!-- main app container -->
+﻿<app-menu></app-menu>
+<!-- main app container -->
 <div class="jumbotron">
     <div class="container">
         <div >
