--- a/client/app/menu/menu.component.html
+++ b/client/app/menu/menu.component.html
@@ -14,21 +14,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Accueil</a></li>
-        <li><a href="/products"> <i class="fa fa-user"></i> Products</a></li>
-        <li><a href="/services"> <i class="fa fa-lock"></i>Services</a></li>
-        <li><a href="/comptes">Compte</a></li>
-        <li><a href="/logout">Logout</a></li>
-      </ul>
-        <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Ajouter un mouvement</a></li>
-            <li><a href="#">Supprimer un mouvement</a></li>
-            <li><a href="#">Planifier un prélèvement régulier</a></li>
-          </ul>
-        </li>
+        <li><a href="/">Accueil</a></li>
+        <li><a href="/create"> <i class="fa fa-user"></i>Ajout d'un mouvement</a></li>
+        <li><a href="/logout">Logout</a></li><!--*ngIf="connect=true"-->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
