--- a/client/app/mouvement-edit/mouvement.edit.component.html
+++ b/client/app/mouvement-edit/mouvement.edit.component.html
@@ -1,3 +1,31 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" style="margin-top: -13px;" [routerLink]="['/']"><img src="../../assets/images/logo.png"></a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a [routerLink]="['/']">Voir les mouvements</a></li>
+                <li><a [routerLink]="['/create']"> <i class="fa fa-user"></i>Ajout d'un mouvement</a></li>
+                <li><a [routerLink]="['/login']" (click)="logout()">Logout</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><b>{{currentUser.firstName}} {{currentUser.lastName}}</b></a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+
 <div class="col-md-6 col-md-offset-3">
     <h2>Editer un mouvement</h2>
     <form name="form" (ngSubmit)="f.form.valid && updateMouvement()" #f="ngForm" novalidate>
