je commit mon erreur car j'suis mauvais

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -1,5 +1,4 @@
-﻿<app-menu></app-menu>
-<!-- main app container -->
+﻿<!-- main app container -->
 <div class="jumbotron">
     <div class="container">
         <div >
